fix(modal): overflow when scrollable

--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -174,6 +174,10 @@ $g-c-modal-z: 50 !default;
 
 	&:not(.c-modal--scrollable) {
 		overflow: visible;
+
+		.c-modal__body {
+			overflow: visible;
+		}
 	}
 }
 
